--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      * {
-        font-family: "Open Sans", sans-serif;
-        margin: 0;
-      }
-    </style>
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;700&family=Ubuntu:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <title>Firebase Chat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
